--- a/index.html
+++ b/index.html
@@ -20,13 +20,9 @@
     <link href='https://fonts.googleapis.com/css?family=Borel' rel='stylesheet'>
 
     <!-- Open Graph / Social Media Metadata -->
-     <!--
     <meta property="og:title" content="Present Spinner">
-    <meta property="og:description" content="Your website description here">
-    <meta property="og:image" content="path/to/image.jpg">
-    <meta property="og:url" content="https://yourwebsite.com">
-    <meta name="twitter:card" content="summary_large_image">
-    -->
+    <meta property="og:description" content="Time to open presents! Who's present should we open next?">
+    <meta property="og:image" content="Presents-Image.jpg">=
 
 </head>
 <body id="body" class="sky">
