Better Mobile Support

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <!-- Open Graph / Social Media Metadata -->
     <meta property="og:title" content="Present Spinner">
     <meta property="og:description" content="Time to open presents! Who's present should we open next?">
-    <meta property="og:image" content="Presents-Image.jpg">=
+    <meta property="og:image" content="Presents-Image.jpg">
 
 </head>
 <body id="body" class="sky">
